CHATS_SIT/force-app/main/default/objects/Ideas_Vote__c.object
<CustomObject>
    <fields>
        <fullName>NBR_IDEA__c</fullName>
        <label>Idea Number</label>
        <referenceTo>Ideas__c</referenceTo>
        <relationshipLabel>Ideas Votes</relationshipLabel>
        <relationshipName>Ideas_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voted_User__c</fullName>
        <label>Voted By User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_SFID__c</fullName>
        <label>Voter SFID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>confirm__c</fullName>
        <label>Click Save to Confirm</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Ideas Vote</label>
    <nameField>
        <displayFormat>IV-{0}</displayFormat>
        <label>Ideas Vote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>